added environment, prod, staging or dev
